--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 8082
 spring:
   application:
-    name: aurora
+    name: storage-aurora
   jpa:
     show-sql: false
     hibernate:
